assert-struct/tests/snapshots/nested_field_access__simple_nested_mismatch.snap
---
source: assert-struct/tests/nested_field_access.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/nested_field_access_errors/simple_nested_mismatch.rs:22:22
   |
22 |         inner.value: 100,  // Should be 42, will fail
   |                      ^^^ got 42
